apps/talos_cluster/plausible/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: plausible
    namespace: blog
spec:
    parentRefs:
        - name: envoy-gateway
          namespace: envoy-gateway
    hostnames:
        - plausible.midnightthoughts.space
    rules:
        - backendRefs:
              - name: plausible-plausible-analytics
                port: 80
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
    name: plausible-compression
    namespace: blog
spec:
    targetRef:
        group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: plausible
    compression:
        - type: Gzip
        - type: Brotli
